dhall/tests/type-inference/failure/unit/FunctionTypeKindSort.txt
Type error: error: Sort does not have a type
 --> <current file>:1:7
  |
1 | Kind → Sort
  |        ^^^^ Sort does not have a type
  |
